--- a/src/components/styles/AddMemberComponent.module.css
+++ b/src/components/styles/AddMemberComponent.module.css
@@ -5,6 +5,7 @@
     background-color: #f9f9f9;
     width: 50%;
     margin: 0 auto;
+    text-align: center;
 }
 
 .addMemberComponent h2 {
