--- a/src/components/styles/AdminLeftNavBar.module.css
+++ b/src/components/styles/AdminLeftNavBar.module.css
@@ -2,13 +2,15 @@
     position: fixed;
     left: 0;
     top: 10vh;
-    width: 14vw;
-    height: 100%;
-    padding: 10px 30px;
+    /* width: 20vw; */
+    width: fit-content;
+    height: 85vh;
+    padding: 10px;
     background-color: #333;
     color: #fff;
-    border-radius: 20px;
+    border-radius: 10px;
     margin-left: 10px;
+    margin-right: 1vw;
 }
 
 .sidebarContainer {
@@ -16,7 +18,7 @@
     flex-direction: column;
     row-gap: 2rem;
     padding-bottom: 3rem;
-    height: 100%;
+    /* height: 100%; */
 }
 
 .sidebarLogo {
